@@ -1,6 +1,8 @@
 package com.dotcms.contenttype.test;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 import com.dotcms.contenttype.exception.NotFoundInDbException;
 import com.dotcms.contenttype.model.field.DataTypes;
@@ -24,21 +26,27 @@ import com.dotcms.contenttype.model.type.ImmutableWidgetContentType;
 import com.dotcms.contenttype.model.type.UrlMapable;
 import com.dotcms.datagen.ContentTypeDataGen;
 import com.dotcms.datagen.FolderDataGen;
+import com.dotcms.datagen.HTMLPageDataGen;
+import com.dotcms.datagen.SiteDataGen;
+import com.dotcms.datagen.TemplateDataGen;
 import com.dotcms.datagen.TestDataUtils;
 import com.dotmarketing.beans.Host;
 import com.dotmarketing.business.APILocator;
+import com.dotmarketing.business.FactoryLocator;
 import com.dotmarketing.exception.DotDataException;
 import com.dotmarketing.exception.DotSecurityException;
 import com.dotmarketing.portlets.folders.business.FolderAPI;
 import com.dotmarketing.portlets.folders.model.Folder;
+import com.dotmarketing.portlets.htmlpageasset.model.HTMLPageAsset;
+import com.dotmarketing.portlets.templates.model.Template;
 import java.io.File;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -216,7 +224,7 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 				.variable("velocityVarNameTesting" + time)
 				.build();
 		type = contentTypeFactory.save(type);
-		final List<Class> fieldClasses = Collections.singletonList(ImmutableWysiwygField.class);
+		final List<Class> fieldClasses = List.of(ImmutableWysiwygField.class);
 		addFieldsWithVariables(type, fieldClasses);
 		type.fields()
 				.forEach(field -> {
@@ -511,8 +519,8 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 
 		final ContentType contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
-		Assert.assertEquals("testingIcon",contentTypeSearched.icon());
-		Assert.assertEquals(2,contentTypeSearched.sortOrder());
+		assertEquals("testingIcon",contentTypeSearched.icon());
+		assertEquals(2,contentTypeSearched.sortOrder());
 	}
 
 	/***
@@ -530,8 +538,8 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 
 		final ContentType contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
-		Assert.assertEquals("testingIcon",contentTypeSearched.icon());
-		Assert.assertEquals(0,contentTypeSearched.sortOrder());
+		assertEquals("testingIcon",contentTypeSearched.icon());
+		assertEquals(0,contentTypeSearched.sortOrder());
 	}
 
 	/***
@@ -550,8 +558,8 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 		final ContentType contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
 		Assert.assertNotNull(contentTypeSearched.icon());
-		Assert.assertEquals(10,contentTypeSearched.sortOrder());
-		Assert.assertEquals(BaseContentType.iconFallbackMap.get(contentTypeSearched.baseType()),contentTypeSearched.icon());
+		assertEquals(10,contentTypeSearched.sortOrder());
+		assertEquals(BaseContentType.iconFallbackMap.get(contentTypeSearched.baseType()),contentTypeSearched.icon());
 	}
 
 	/***
@@ -569,8 +577,8 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 
 		ContentType contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
-		Assert.assertEquals("testingIcon",contentTypeSearched.icon());
-		Assert.assertEquals(2,contentTypeSearched.sortOrder());
+		assertEquals("testingIcon",contentTypeSearched.icon());
+		assertEquals(2,contentTypeSearched.sortOrder());
 
 		final ContentTypeBuilder builder = ContentTypeBuilder.builder(type);
 		builder.icon("updatedIcon");
@@ -579,8 +587,8 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 
 		contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
-		Assert.assertEquals("updatedIcon",contentTypeSearched.icon());
-		Assert.assertEquals(10,contentTypeSearched.sortOrder());
+		assertEquals("updatedIcon",contentTypeSearched.icon());
+		assertEquals(10,contentTypeSearched.sortOrder());
 	}
 
 	/***
@@ -598,8 +606,8 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 
 		ContentType contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
-		Assert.assertEquals("testingIcon",contentTypeSearched.icon());
-		Assert.assertEquals(0,contentTypeSearched.sortOrder());
+		assertEquals("testingIcon",contentTypeSearched.icon());
+		assertEquals(0,contentTypeSearched.sortOrder());
 
 		final ContentTypeBuilder builder = ContentTypeBuilder.builder(type);
 		builder.icon("updatedIcon");
@@ -607,8 +615,8 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 
 		contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
-		Assert.assertEquals("updatedIcon",contentTypeSearched.icon());
-		Assert.assertEquals(0,contentTypeSearched.sortOrder());
+		assertEquals("updatedIcon",contentTypeSearched.icon());
+		assertEquals(0,contentTypeSearched.sortOrder());
 	}
 
 	/***
@@ -626,7 +634,7 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 
 		ContentType contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
-		Assert.assertEquals(10,contentTypeSearched.sortOrder());
+		assertEquals(10,contentTypeSearched.sortOrder());
 
 		final ContentTypeBuilder builder = ContentTypeBuilder.builder(type);
 		builder.sortOrder(1);
@@ -634,6 +642,96 @@ public class ContentTypeFactoryImplTest extends ContentTypeBaseTest {
 
 		contentTypeSearched = contentTypeFactory.find(type.id());
 		Assert.assertNotNull(contentTypeSearched);
-		Assert.assertEquals(1,contentTypeSearched.sortOrder());
+		assertEquals(1,contentTypeSearched.sortOrder());
 	}
+
+	/**
+	 * Method to test: {@link ContentTypeAPIImpl#findUrlMapped(String)}
+	 * When: Create a {@link ContentType} with a urlMapPattern and detailPage
+	 * and call the method with the page's id
+	 * Should: Return the {@link ContentType}
+	 */
+	@Test
+	public void findUrlMappedByPageId() throws DotDataException {
+		final Host host = new SiteDataGen().nextPersisted();
+		final Template template = new TemplateDataGen().nextPersisted();
+		final HTMLPageAsset htmlPageAsset = new HTMLPageDataGen(host, template).nextPersisted();
+
+		final ContentType contentType = new ContentTypeDataGen()
+				.detailPage(htmlPageAsset.getIdentifier())
+				.urlMapPattern("/test")
+				.nextPersisted();
+
+		final List<String> urlMapped = FactoryLocator.getContentTypeFactory()
+				.findUrlMappedPattern(htmlPageAsset.getIdentifier());
+
+		assertEquals(1, urlMapped.size());
+		assertTrue(urlMapped.contains("/test"));
+	}
+
+    /**
+     * Method to test: {@link ContentTypeAPIImpl#findUrlMapped(String)}
+	 * When: Called the method with a Page'id that not have any ContentType link with it
+	 * Should: Return an empty list
+	 */
+     	@Test
+	public void findUrlMappedByPageIdWithoutContentType() throws DotDataException {
+		final Host host = new SiteDataGen().nextPersisted();
+		final Template template = new TemplateDataGen().nextPersisted();
+		final HTMLPageAsset htmlPageAsset = new HTMLPageDataGen(host, template).nextPersisted();
+
+		final List<String> urlMapped = FactoryLocator.getContentTypeFactory()
+				.findUrlMappedPattern(htmlPageAsset.getIdentifier());
+
+		assertTrue(urlMapped.isEmpty());
+	}
+
+	/**
+	 * Method to test: {@link ContentTypeAPIImpl#findUrlMapped(String)}
+	 * when: Called the method with Null
+	 * should: Throw a {@link IllegalArgumentException}
+	 */
+	@Test(expected = IllegalArgumentException.class)
+	public void findUrlMappedByPageIdWithNull() throws DotDataException {
+		FactoryLocator.getContentTypeFactory().findUrlMappedPattern(null);
+	}
+
+	/**
+	 * Test the {@link com.dotcms.contenttype.business.ContentTypeFactoryImpl#markForDeletion(ContentType)} method
+	 * Wew want to corroborate that the content type is marked for deletion doesn't make it into the search results nor count methods
+	 * @throws Exception
+	 */
+	@Test
+	public void Test_Mark_ContentTypeForDeletion() throws Exception {
+		final ContentType contentType = new ContentTypeDataGen().nextPersisted();
+		int searchCount = contentTypeFactory.searchCount(null);
+		List<ContentType> types = contentTypeFactory.search(String.format("velocity_var_name like '%s'",contentType.variable()), BaseContentType.ANY, "mod_date", -1, 0);
+		Assert.assertTrue(types.size() > 0);
+
+		ContentType found = contentTypeFactory.find(contentType.variable());
+		Assert.assertNotNull(found);
+
+		long count = contentTypeFactory.findAll().stream().filter(ct -> Objects.equals(ct.id(), contentType.id())).count();
+		Assert.assertEquals(1, count);
+
+		//MARK FOR DELETION
+		contentTypeFactory.markForDeletion(contentType);
+		Assert.assertTrue(contentTypeFactory.searchCount(null) <  searchCount );
+
+		//Marking the CT should exclude it from the search results
+		types = contentTypeFactory.search(String.format("velocity_var_name like '%s'",contentType.variable()), BaseContentType.ANY, "mod_date", -1, 0);
+		Assert.assertTrue(types.isEmpty());
+
+		//Also once marked it must disappear from the list of all content types
+		count = contentTypeFactory.findAll().stream().filter(ct -> Objects.equals(ct.id(), contentType.id())).count();
+		Assert.assertEquals(0, count);
+
+		//But If we have the id or varName we should still be able to find the content type even it is marked for deletion
+		found = contentTypeFactory.find(contentType.variable());
+		Assert.assertNotNull(found);
+
+		found = contentTypeFactory.find(contentType.id());
+		Assert.assertNotNull(found);
+	}
+
 }
